--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,8 @@
             <div id="cabecera">
                 Cabecera y perro
                 gato
+                pelota
+                chasing
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
