cambio en cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,8 +8,7 @@
             <div id="cabecera">
                 Cabecera y perro
                 gato
-                pelota
-                chasing
+                caramelo
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
